--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ a {
 
 .navbar li a:hover{
         cursor: pointer;
-        color: red;
         transition: 0.5s;
         background: #333;
         border-radius: 15px;
@@ -183,14 +182,13 @@ a {
     flex-direction: column;
     background: #333;
     padding: 20px;
-    padding-left: 15px;
+    margin: 10px;
     padding-right: 15px;
-    margin: 25px;
     border-radius: 5px;
 }
 
 .feature p{
-    font-size: 1.2rem;
+    font-size: 15px;
 }
 
 .feature-title{
@@ -215,6 +213,10 @@ a {
 #product #product-container{
     display: grid;
     place-items: center;
+}
+
+#items .item img{
+    width: auto;
 }
 
 #items .item p{
@@ -281,7 +283,10 @@ a {
 }
 
 .gallery{
-    width: 100%;
+    width: 99vw;
+    display: grid;
+    place-items: center;
+    background: #eee;
 }
 
 .gallery .headline{
@@ -290,24 +295,22 @@ a {
 }
 
 .gallery-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    background-color: #eee;
-
+    width: 80vh;
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
 }
 
 .gallery-image{
-    width: 70%;
-    background: #eee;
-    color: #111;
-    padding: 25px;
-    height: 300px;
+    flex: none;
+    scroll-snap-align: start;
 }
 
-.gallery.headline{
-    padding-top: 25px;
+img{
+    width: 100%;
+    width: 100%;
 }
+
 
 #footer{
     background: #111;
@@ -318,31 +321,19 @@ a {
 
 /* ------------------------mobile--------------------------- */
 
-@media (max-width: 768px){
-.navbar{
-    height: 180px;
-}
+@media (max-width: 846px){
+    .navbar{
+        height: 180px;
+    }
 
-#navbar-container{
-    flex-direction: column;
-    padding: 20px 0px;
-}
+    #navbar-container{
+        display: grid;
+        justify-content: center;
+    }
 
-#navbar-items{
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-}
-
-#navbar-items .items{
-    padding: 5px 100px;
-}
-
-#navbar-items li:nth-child(2){
-    margin: 5px;
-    padding: 3px;
-    border-top: 1px solid #333;
-}
+    a{
+        font-size: 15px;
+    }
 
 #clients-container{
     grid-template-columns: repeat(2, 1fr);
@@ -350,6 +341,10 @@ a {
 
 .client{
     width: 50%;
+}
+
+.feature{
+    width: 100%;
 }
 
 #product-container{
@@ -366,9 +361,18 @@ a {
     text-align: center;
 }
 
+.gallery{
+    width: 100%;
+}
+
+.gallery-container{
+    width: 100%;
+}
+
 .gallery-image{
     width: 100%;
     height: 110x;
+    pointer-events: none;
 }
     
 }
