--- a/css/SobreStyle.css
+++ b/css/SobreStyle.css
@@ -47,21 +47,20 @@ body{
 
 .navbar li a:hover{
         cursor: pointer;
-        color: red;
         transition: 0.5s;
         background: #333;
         border-radius: 15px;
 }
 
 .sobre-energia{
-    align-items: center;
+    justify-content: center;
     background: #eee;
     padding: 50px;
+    text-align: center;
 }
 .sobre-energia h1{
     text-transform: uppercase;
     padding: 15px;
-    margin-left: 35px;
 }
 
 .sobre-energia p{
@@ -71,24 +70,22 @@ body{
     color: rgb(16, 16, 16);
 }
 
+
 #img-energia1{
-    margin: 15px;
-    display: flex;
+    display: grid;
     width: 100%;
-    height: 500px;
-    justify-content: center;
+    height: auto;
+    place-items: center;
 }
 
 #img-energia2{
-    margin: 15px;
-    display: flex;
-    width: 100%;
-    height: 500px;
-    justify-content: center;
+    display: grid;
+    width: auto;
+    height: 400pxs;
+    place-items: center;
 }
 
 #img-planta{
-    margin: 15px;
     display: flex;
     width: 100%;
     height: auto;
@@ -96,10 +93,9 @@ body{
 }
 
 #img-brasil{
-    margin: 15px;
     display: flex;
     width: 100%;
-    height: auto;
+    height: 400px;
     justify-content: center;
 }
 #footer{
@@ -107,4 +103,47 @@ body{
     color: #eee;
     padding: 35px;
     text-align: center;
+}
+
+/* ------------------------------mobile------------------------------- */
+
+@media (max-width: 846px) {
+    .navbar{
+        height: 180px;
+    }
+
+    #navbar-container{
+        display: grid;
+        justify-content: center;
+    }
+
+    .sobre-energia{
+        padding: 15px;
+    }
+
+    #img-energia1{
+        height: 250px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    #img-energia2{
+        height: 250px;
+        width: 100%;
+        justify-content: center;
+    }
+#img-planta{
+    height: 250px;
+    width: 100%;
+}
+
+#img-brasil{
+    height: 290px;
+    width: 100%;
+}
+
+.sobre-energia p{
+    font-size: 16px;
+}
+    
 }
