--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,8 @@ a {
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 
 .gallery-image{
